update login page

--- a/front/projects/web/src/styles/base.scss
+++ b/front/projects/web/src/styles/base.scss
@@ -8,16 +8,16 @@ $px-length: list.length($px-values);
     margin: list.nth($px-values, $i);
   }
   .mt-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-top: list.nth($px-values, $i);
   }
   .mr-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-right: list.nth($px-values, $i);
   }
   .mb-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-bottom: list.nth($px-values, $i);
   }
   .ml-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-left: list.nth($px-values, $i);
   }
   .mx-#{$index} {
     margin: 0 list.nth($px-values, $i);
@@ -26,19 +26,19 @@ $px-length: list.length($px-values);
     margin: list.nth($px-values, $i) 0;
   }
   .pa-#{$index} {
-    margin: list.nth($px-values, $i);
+    padding: list.nth($px-values, $i);
   }
   .pt-#{$index} {
-    margin: list.nth($px-values, $i);
+    padding-top: list.nth($px-values, $i);
   }
   .pr-#{$index} {
-    margin: list.nth($px-values, $i);
+    padding-right: list.nth($px-values, $i);
   }
   .pb-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-bottom: list.nth($px-values, $i);
   }
   .pl-#{$index} {
-    margin: list.nth($px-values, $i);
+    margin-left: list.nth($px-values, $i);
   }
   .px-#{$index} {
     margin: 0 list.nth($px-values, $i);
