--- a/front/projects/web/src/styles/element.scss
+++ b/front/projects/web/src/styles/element.scss
@@ -38,6 +38,10 @@
   z-index: 9999 !important;
 }
 
+.el-button.focus-outline-none:focus-visible {
+  outline: none;
+}
+
 //el-dialog样式
 .el-dialog.custom-dialog {
   --el-dialog-border-radius: 8px !important;
