improve user-related table

--- a/front/projects/web/src/styles/style.scss
+++ b/front/projects/web/src/styles/style.scss
@@ -12,6 +12,7 @@
   --hp-aside-active-bg-color: var(--el-color-info);
   --hp-menu-padding: 10px;
   --hp-menu-item-height: 42px;
+  --hp-table-header-bg-color: #f5f7fa;
   //---------
   --table-current-color: #c5c8ca;
   --table-hover-color: #e7e8e9;
