--- a/front/projects/web/src/styles/style.scss
+++ b/front/projects/web/src/styles/style.scss
@@ -14,12 +14,10 @@
   --hp-menu-item-height: 42px;
   --hp-table-header-bg-color: #f5f7fa;
   --hp-card-header-bg-color: #eeeff0;
+  --hp-font-family: 'Roboto', 'Noto Sans SC', -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Segoe UI, Arial, "PingFang SC", "miui", "Hiragino Sans GB", "Microsoft Yahei", sans-serif;
+  --el-font-family: var(--hp-font-family);
+  font-family: var(--hp-font-family);
   background-color: var(--hp-bg-color);
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Segoe UI, Arial, Roboto, "PingFang SC", "miui", "Hiragino Sans GB", "Microsoft Yahei", sans-serif;;
-  //---------
-  //--font-family: Poppins, "Open Sans", "Microsoft YaHei", "Ping Fang SC", Helvetica, Arial, sans-serif;
-  //--el-font-family: var(--font-family) !important;
-  //--vxe-ui-font-family: var(--font-family) !important;
 }
 
 body {
