--- a/front/projects/web/src/styles/font.scss
+++ b/front/projects/web/src/styles/font.scss
@@ -8,14 +8,13 @@
 }
 
 /* 引入 Roboto Medium */
-@font-face {
-  font-family: 'Roboto';
-  src: url('../assets/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
+//@font-face {
+//  font-family: 'Roboto';
+//  src: url('../assets/fonts/Roboto/Roboto-Medium.ttf') format('truetype');
+//  font-weight: 500;
+//  font-style: normal;
+//  font-display: swap;
+//}
 /* 引入 Roboto SemiBold */
 @font-face {
   font-family: 'Roboto';
@@ -44,14 +43,13 @@
 }
 
 /* 引入 Roboto Medium  Italic*/
-@font-face {
-  font-family: 'Roboto';
-  src: url('../assets/fonts/Roboto/Roboto-MediumItalic.ttf') format('truetype');
-  font-weight: 500;
-  font-style: italic;
-  font-display: swap;
-}
-
+//@font-face {
+//  font-family: 'Roboto';
+//  src: url('../assets/fonts/Roboto/Roboto-MediumItalic.ttf') format('truetype');
+//  font-weight: 500;
+//  font-style: italic;
+//  font-display: swap;
+//}
 /* 引入 Roboto SemiBoldItalic */
 @font-face {
   font-family: 'Roboto';
@@ -80,14 +78,13 @@
 }
 
 /* 引入 Noto-Sans-SC Medium */
-@font-face {
-  font-family: 'Noto Sans SC';
-  src: url('../assets/fonts/Noto-Sans-SC/NotoSansSC-Medium.ttf') format('truetype');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
+//@font-face {
+//  font-family: 'Noto Sans SC';
+//  src: url('../assets/fonts/Noto-Sans-SC/NotoSansSC-Medium.ttf') format('truetype');
+//  font-weight: 500;
+//  font-style: normal;
+//  font-display: swap;
+//}
 /* 引入 Noto-Sans-SC SemiBold */
 @font-face {
   font-family: 'Noto Sans SC';
