--- a/front/projects/web/src/styles/theme.scss
+++ b/front/projects/web/src/styles/theme.scss
@@ -3,16 +3,17 @@
     'white': #ffffff,
     'black': #000000,
     'primary': (
-      'base': #409eff,
+      'base': #2685c9,
     ),
     'success': (
-      'base': #67c23a,
+      //'base': #02bc77,
+      'base': #11b377,
     ),
     'warning': (
       'base': #e6a23c,
     ),
     'danger': (
-      'base': #f56c6c,
+      'base': #d9485d,
     ),
     'error': (
       'base': #f56c6c,
